# opendp

./: .clabot  .flake8  .gitignore  .nojekyll  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CNAME  CODE_OF_CONDUCT.md  LICENSE  MIGRATION.md  README.md  SECURITY.md  Sydney_Synth_Pedestrian_Counts_2024_2_3.csv  VERSION  do-not-merge  erf_inv_test_multi.py  example.py  first-look-at-OpenDP.ipynb  index.html  lake-manifest.json  lakefile.lean  opendp-exercise-context.ipynb  opendp-exercise-solutions.ipynb  opendp-exercise-sydney-solutions.ipynb  opendp-exercise-sydney.ipynb  opendp-exercise.ipynb  outline.py  poll-data.csv  ppai-exercise.ipynb  robots.txt
python/: .coveragerc  .mypy.ini  .pylintrc  .pytest.ini  LICENSE  LICENSE.txt  MANIFEST.in  README.md  Untitled.ipynb  amplification_demo.py  build_docs.sh  conftest.py  opendp.py  pyproject.toml  qcnd_test.py  requirements-dev-3.10.txt  requirements-dev-3.13.txt  requirements-dev.in  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  stability_mechanism.py  test.py  tulap.py
python/example/: .gitignore  0_differential_privacy.ipynb  README.md  accuracy_pitfalls.ipynb  attack_membership.ipynb  attack_reconstruction.ipynb  attack_simple.ipynb  basic_data_analysis.ipynb  demo.ipynb  histograms.ipynb  network_ddp_demo.py  network_hook_bug_repro.py  network_iris.py  network_lstm.py  network_pums.py  opendp_intermediate_data_analysis.ipynb  private_mean.ipynb  requirements.txt  scratch.py  simple_attack.ipynb  stability_mechanism.py  test.py  unknown_dataset_size.ipynb  unknown_dataset_size_mike.ipynb
python/example/data/: .gitignore  pums_10000.csv
python/example/network/: demo_ddp_sentence.py  demo_p2p_pums.py  demo_p2p_sentence.py  network_hook_bug_repro.py  pums_downloader.py  sentence_module.py  utilities.py
python/example/pums/: coordinator.py  download.py
python/src/: interactive_proto.py  interactive_proto_functions.py  interactive_proto_hooks.py  interactive_proto_hybrid.py  interactive_proto_methods.py  interactive_proto_no_listener_context.py  interactive_proto_no_listener_ctx.py  interactive_proto_no_listener_query.py  interactive_proto_pe_classes.py  interactive_proto_pe_flattened.py  interactive_proto_pe_primitives.py  interactive_proto_pe_prims_context.py  interactive_proto_provision_execute.py  interactive_proto_salil.py  pandas_test_accessor.py  pandas_test_extension.py  pandas_test_simple.py  private_data.py
python/src/opendp/: __init__.py  _convert.py  _convert_maps.py  _data.py  _internal.py  _lib.py  accuracy.py  analysis.py  beam.py  comb.py  combinators.py  context.py  core.py  domains.py  interactive_proto.py  interactive_scratch.py  mean.py  meas.py  measurements.py  measures.py  metrics.py  mod.py  partial.py  polars.py  prelude.py  serialization.py  simple.py  trans.py  transformations.py  typing.py
python/templates/: conf.py_t  master_doc.rst_t
python/test/: __init__.py  conftest.py  helpers.py  plot_distributions.py  test_accuracy.py  test_api_v1.py  test_ast.py  test_barely.py  test_beam.py  test_binary_search.py  test_comb.py  test_context_usability.py  test_convert.py  test_convert_extras.py  test_core.py  test_decorators.py  test_docs.py  test_domains.py  test_errors.py  test_interactive.py  test_meas.py  test_measures.py  test_metric_cast.py  test_metrics.py  test_opendp.py  test_partial.py  test_polars.py  test_polars_ternary.py  test_polars_to_ibis.py  test_runtime_type.py  test_serialization.py  test_space_of.py  test_subprocesses.py  test_supporting_elements.py  test_tests.py  test_trans.py  test_tulap.py  test_typing.py  test_usability.py  test_user_transform.py  (+1 more)
python/test/analysis/: test_analysis.py
python/test/context/: test_context.py
python/test/contingency/: test_aim.py  test_contingency_table.py  test_elements.py
python/test/extras/: test_canonical_noise.py  test_csprng.py  test_eigenvalues.py  test_eigenvector.py  test_examples.py  test_ext_domains.py  test_linear_regression.py  test_make_private_selection.py  test_np_clamp.py  test_np_count.py  test_np_eigenvalues.py  test_np_eigenvector.py  test_np_mean.py  test_np_pca.py  test_np_sum.py  test_np_xTx.py  test_pca.py  test_private_theil_sen.py  test_synth_mwem.py  test_tulap.py
python/test/extrinsics/: test_array.py  test_csprng.py  test_ext_domains.py  test_make_private_selection.py  test_microdata_faithfulness.py  test_mwem.py  test_np_clamp.py  test_np_count.py  test_np_eigenvalues.py  test_np_eigenvector.py  test_np_mean.py  test_np_pca.py  test_np_sum.py  test_np_xTx.py  test_synth_mwem.py  test_tulap.py  test_universal_microdata_scheme.py
python/test/integration/: test_count.py  test_histogram.py  test_mean.py  test_proportion_ci.py  test_quantile.py  test_sum.py  test_sum_float.py  test_sum_int.py  test_variance.py
python/test/mbi/: test_algorithms.py  test_table.py  test_utilities.py
python/test/polars/: test_truncation.py
python/test/synthetic/: aim_utility_analysis.ipynb  test_aim.py
python/test_network/: test_ddp.py  test_iris.py  test_memory.py
python/wheelhouse/: opendp-0.0.1-py3-none-any.whl
rust/: Cargo.toml  build.rs  build_rs_cov.profraw  katex.html  opendp-polars-sql.py  test.sh  test2.tex
rust/benches/: mod.rs
rust/benches/b2dp/: main.rs
rust/benches/discrete_laplace/: main.rs
rust/example/: Cargo.toml
rust/example/src/: main.rs
rust/examples/: gaussian_runtime_compare.rs
rust/opendp/: Cargo.toml  README.md
rust/opendp-derive/: Cargo.toml
rust/opendp-ffi/: Cargo.toml
rust/opendp_bootstrap/: Cargo.toml
rust/opendp_codegen/: Cargo.toml
rust/opendp_derive/: Cargo.toml
rust/opendp_tooling/: Cargo.toml
rust/opendp_verified/: Cargo.toml  OpenDPVerified.lean  ROADMAP.md  lake-manifest.json  lakefile.lean  test_compile.lean
rust/signal-handling/: Cargo.toml
rust/src/: definitions.tex  dist.rs  error.rs  error_tests.rs  interactive.rs  lib.rs  lib.sty  mod.sty  poly.rs  samplers.rs  test_rounding.rs
rust/windows/: .gitignore  1_download_and_patch.sh  2_build_dependencies.sh  README.md  gmp-mpfr-sys-1.2.4.patch  rug-1.9.0.patch
(+9419 files in other folders)
