[metadata]
name = opendp
version = 0.9.2.dev0
url = https://opendp.org
project_urls = 
	Source = https://github.com/opendp/opendp
	Issues = https://github.com/opendp/opendp/issues
	Documentation = https://docs.opendp.org/
author = The OpenDP Project
author_email = info@opendp.org
classifiers = 
	Programming Language :: Python :: 3
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent
license_files = ../LICENSE
description = Python bindings for the OpenDP Library
long_description = file: README.md
long_description_content_type = text/markdown
keywords = 
	differential privacy

[options]
zip_safe = false
python_requires = >=3.9
packages = find:
package_dir = 
	= src

[options.packages.find]
where = src

[options.package_data]
opendp = 
	lib/*
	py.typed

[options.extras_require]
# If this changes, update the smoke-test matrix.
numpy = 
	numpy>=1.17
	randomgen
scikit-learn = 
	scikit-learn
	%(numpy)s
polars =
	# A strict version requirement is necessary to keep the serialization format of LazyFrames stable.
	# If you change the version of Polars, 
	# be sure to also change the Polars version in rust/Cargo.toml and test binary compatibility.
	polars==0.20.16
	pyarrow
	%(scikit-learn)s

