[metadata]
name = opendp
version = 0.13.0.dev0
url = https://opendp.org
project_urls = 
	Source = https://github.com/opendp/opendp
	Issues = https://github.com/opendp/opendp/issues
	Documentation = https://docs.opendp.org/
author = The OpenDP Project
author_email = info@opendp.org
classifiers = 
	Programming Language :: Python :: 3
	Operating System :: OS Independent
license = MIT
license_files = LICENSE
description = Python bindings for the OpenDP Library
long_description = file: README.md
long_description_content_type = text/markdown
keywords = 
	differential privacy

[options]
zip_safe = false
python_requires = >=3.10
install_requires =
    deprecated
packages = find:
package_dir = 
	= src

[options.packages.find]
where = src

[options.package_data]
opendp = 
	lib/*
	py.typed

[options.extras_require]
# If this changes, update the smoke-test matrix.
numpy = 
	numpy
	randomgen>=2.0.0
scikit-learn = 
	scikit-learn
	%(numpy)s
polars =
	# A strict version requirement is necessary to keep the serialization format of LazyFrames stable.
	# If you change the version of Polars, 
	# be sure to also change the Polars version in rust/Cargo.toml and test binary compatibility,
	# and update _EXPECTED_POLARS_VERSION in mod.py as well.
	polars==1.32.0
	pyarrow
	# sk-learn is not strictly necessary, but it makes it simpler
	# to just have a single axis of increasing functionality.
	%(scikit-learn)s

[bdist_wheel]
# This signifies to the packaging system that the bundled binary 
# only uses limited APIs that are present in all Python versions back to at least Python 3.10
# For more detail: https://docs.python.org/3/c-api/stable.html#c.Py_LIMITED_API
py_limited_api=cp310