[workspace.package]
version = "0.14.2-dev"
license-file = "../LICENSE"
readme = "../README.md"
homepage = "https://opendp.org/"
repository = "https://github.com/opendp/opendp"
authors = ["The OpenDP Project <contact@opendp.org>"]
edition = "2024"
rust-version = "1.88.0" # MSRV via `cargo install cargo-msrv && cargo msrv --min 1.49.0 -- cargo check --all-features`

[workspace]
members = [".", "opendp_derive", "opendp_tooling"]
default-members = [".", "opendp_derive", "opendp_tooling"]

[workspace.dependencies]
syn = { version = "2.0", features = ["full", "parsing"] }
quote = { version = "1.0" }
proc-macro2 = { version = "1.0" }

[package]
name = "opendp"
description = "A library of differential privacy algorithms for the statistical analysis of sensitive private data."
build = "build/main.rs"
version.workspace = true
license-file.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

exclude = ["windows/*"]

[dependencies]
opendp_derive = { path = "opendp_derive", version = "0.14.2-dev" }
rand = "0.7.3"
num = "0.3.1"
thiserror = "1.0.24"
statrs = "0.13.0"
dashu = { version = "0.4.0", features = ["num-traits_v02"] }
openssl = { version = "0.10.71", features = ["vendored"], optional = true }

opendp_tooling = { path = "opendp_tooling", optional = true, version = "0.14.2-dev" }
readonly = "0.2"
bitvec = "1.0"

# A strict version requirement is necessary to keep the serialization format of LazyFrames stable.
# If you change the version of Polars, 
# be sure to also change the Python package version requirement and test binary compatibility.
#
# The features track the features enabled in the Rust build for the Polars Python crate.
# Having matching features is necessary for cross-binary DSL compatibility.
polars = { version = "=0.52.0", features = ["full", "meta", "cutqcut", "row_hash"], optional = true }
polars-python = { version = "=0.52.0", optional = true }

# these crates are implicit in the tree behind polars, 
# or have symbols we need that aren't in the prelude
polars-expr = { version = "=0.52.0", features = ["json"], optional = true }
polars-plan = { version = "=0.52.0", optional = true }
polars-utils = { version = "=0.52.0", optional = true }
polars-arrow = { version = "=0.52.0", optional = true }
pyo3-polars = { version = "*", features = ["derive", "dtype-array", "dtype-categorical", "dtype-struct", "lazy"], optional = true }
pyo3 = { version = "*", features = ["abi3-py310"], optional = true }

# matches the version specified in Polars: 
#   https://github.com/pola-rs/polars/blob/main/Cargo.toml
chrono = { version = "=0.4.41", default-features = false, features = ["std"], optional = true }
serde = { version = "1.0", optional = true }
serde-pickle = { version = "1.1", optional = true }

lazy_static = { version = "1.4.0", optional = true }

[build-dependencies]
opendp_tooling = { path = "opendp_tooling", optional = true, version = "0.14.2-dev" }
syn = { workspace = true, optional = true }
proc-macro2 = { workspace = true, optional = true }
cbindgen = { version = "0.28.0", optional = true }
pyo3-build-config = { version = "*", features = ["resolve-config"], optional = true }

[patch.crates-io]
# When building locally, orient the package to python compatibility via patches.
# When publishing to crates.io, the patches are ignored and polars is pinned to the crates.io version.
# If the polars crates at the python tag and polars crates on crates.io diverge,
#     then you can use autocfg in the build script to create a cfg for rectifying API differences.

# https://github.com/pola-rs/polars/blob/py-1.36.1/Cargo.toml
polars = { git = "https://github.com/pola-rs/polars", tag = "py-1.36.1" }
polars-python = { git = "https://github.com/pola-rs/polars", tag = "py-1.36.1" }
polars-expr = { git = "https://github.com/pola-rs/polars", tag = "py-1.36.1" }
polars-plan = { git = "https://github.com/pola-rs/polars", tag = "py-1.36.1" }
polars-utils = { git = "https://github.com/pola-rs/polars", tag = "py-1.36.1" }
polars-arrow = { git = "https://github.com/pola-rs/polars", tag = "py-1.36.1" }
polars-mem-engine = { git = "https://github.com/pola-rs/polars", tag = "py-1.36.1" }
pyo3-polars = { git = "https://github.com/pola-rs/polars", tag = "py-1.36.1" }

[features]
default = ["partials", "use-openssl"]

floating-point = []
contrib = []
honest-but-curious = []
untrusted = ["floating-point", "contrib", "honest-but-curious"]

polars = [
    "dep:polars",
    "dep:polars-plan",
    "dep:polars-utils",
    "dep:polars-arrow",
    "dep:serde",
    "dep:serde-pickle",
    "dep:chrono",
]
polars-ffi = [
    "polars", 
    "ffi",
    "dep:polars-python",
    "dep:pyo3",
    "dep:pyo3-polars",
    "polars-plan/ffi_plugin", 
    "polars-plan/python"
]
use-openssl = ["openssl"]

# include extern "C" functions in cdylib
ffi = ["lazy_static", "cbindgen"]
# execute proc macros to insert proof links
derive = ["opendp_tooling", "opendp_derive/full", "syn", "proc-macro2"]

# generate language bindings
bindings = ["ffi", "derive", "pyo3-build-config"]

# generate "then_xxx" functions in Rust for "make_xxx" functions whose first two arguments are the metric space
partials = ["derive", "opendp_derive/partials"]

[lib]
crate-type = ["rlib", "cdylib", "staticlib"]

[package.metadata.docs.rs]
no-default-features = true
features = ["use-openssl", "derive", "untrusted", "polars"]
rustdoc-args = [
    # so that latex renders
    "--html-in-header", "katex.html",
    
    # so that proof documents are visible
    "--document-private-items"
]
