[package]
name = "opendp-ffi"
version = "0.1.0"
authors = ["Andrew Vyrros <6577271+andrewvyrros@users.noreply.github.com>"]
edition = "2018"
build = "build/main.rs"

[dependencies]
lazy_static = "1.4.0"
num = "0.3.1"
backtrace = "0.3"

[dependencies.opendp]
path = "../opendp"
default-features = false

[build-dependencies]
serde_json = {version = "1.0.64", features = ["preserve_order"] }
serde = { version = "1.0.126", features = ["derive"] }
indexmap = {version = "1.6.2", features = ["serde"] }

[features]
default = ["use-openssl", "use-mpfr", "python"]
python = []
use-openssl = ["opendp/use-openssl"]
use-mpfr = ["opendp/use-mpfr"]
# re-export features from opendp
use-system-libs = ["opendp/use-system-libs"]

[lib]
crate-type = ["rlib", "cdylib"]
