[package]
name = "opendp-ffi"
description = "Foreign function interfaces for the OpenDP library."
license-file = "../../LICENSE"
homepage = "https://opendp.org/"
repository = "https://github.com/opendp/opendp"
version = "0.0.6"
authors = ["The OpenDP Project <info@opendp.org>"]
edition = "2018"
build = "build/main.rs"
readme = "../../README.md"

[dependencies]
lazy_static = "1.4.0"
num = "0.3.1"
backtrace = "0.3"

[dependencies.opendp]
path = "../opendp"
version = "0.0.6"
default-features = false

[build-dependencies]
serde_json = {version = "1.0.64", features = ["preserve_order"] }
serde = { version = "1.0.126", features = ["derive"] }
indexmap = {version = "1.6.2", features = ["serde"] }

[features]
default = ["use-openssl", "use-mpfr", "python"]
python = []
use-openssl = ["opendp/use-openssl"]
use-mpfr = ["opendp/use-mpfr"]
# re-export features from opendp
use-system-libs = ["opendp/use-system-libs"]

[lib]
crate-type = ["rlib", "cdylib"]
