[package]
name = "opendp-ffi"
description = "Foreign function interfaces for the OpenDP library."
license-file = "../../LICENSE"
readme = "../../README.md"
homepage = "https://opendp.org/"
repository = "https://github.com/opendp/opendp"
version = "0.0.0-development"
authors = ["The OpenDP Project <info@opendp.org>"]
edition = "2021"
rust-version = "1.56"
build = "build/main.rs"

[dependencies]
lazy_static = "1.4.0"
num = "0.3.1"
backtrace = "0.3"

[dependencies.opendp]
path = "../opendp"
version = "0.0.0-development"
default-features = false

[build-dependencies]
serde_json = { version = "1.0.64", features = ["preserve_order"] }
serde = { version = "1.0.126", features = ["derive"] }
indexmap = { version = "1.6.2", features = ["serde"] }

[features]
default = ["use-openssl", "use-mpfr"]
python = []

floating-point = ["opendp/floating-point"]
contrib = ["opendp/contrib"]
untrusted = ["floating-point", "contrib"]

use-openssl = ["opendp/use-openssl"]
use-mpfr = ["opendp/use-mpfr"]
# re-export features from opendp
use-system-libs = ["opendp/use-system-libs"]

[lib]
crate-type = ["rlib", "cdylib"]


[dev-dependencies]
# this enables the "untrusted" feature flag by default when doing tests
opendp-ffi = { path = ".", features = ["untrusted"] }
