[package]
name = "opendp"
version = "0.1.0"
authors = ["Andrew Vyrros <6577271+andrewvyrros@users.noreply.github.com>"]
edition = "2018"

[dependencies]
rand = "0.7.3"
num = "0.3.1"
ieee754 = "0.2.6"
statrs = "0.13.0"

[dependencies.openssl]
version = "0.10.29"
features = ["vendored"]

[dependencies.rug]
version = "1.9.0"
default-features = false
features = ["integer", "float", "rand"]
optional = true

[dependencies.gmp-mpfr-sys]
version = "=1.3.1"
default-features = false
features = ["mpfr"]
optional = true

[features]
default = ["use-mpfr"]
# re-export use-system-libs from mpfr
use-mpfr = ["gmp-mpfr-sys", "rug"]
use-system-libs = ["use-mpfr", "gmp-mpfr-sys/use-system-libs"]


[lib]
