[package]
name = "opendp_derive"
version = "0.0.0+development"
edition = "2021"
description = "Minimal proc-macro wrappers for the opendp_tooling crate."

# proc-macro crates can only export proc-macros
[lib]
proc-macro = true

# we need to reuse the tooling logic in the opendp build script, so it is factored into a separate crate
[dependencies]
syn = { version = "1.0", features = ["full", "parsing"], optional = true }
quote = { version = "1.0", optional = true  }
opendp_tooling = { path = "../opendp_tooling", optional = true  }

[features]
full = ["syn", "quote", "opendp_tooling"]
local-docs = []
