[package]
name = "opendp_tooling"
description = "tooling for proc-macros and code generation"
version = "0.0.0+development"
edition = "2021"

[dependencies]
serde_json = { version = "1.0" }
serde = { version = "1.0", features = ["derive"] }
syn = { version = "1.0", features = ["full", "parsing"] }
quote = { version = "1.0" }
darling = { version = "0.14" }
proc-macro2 = { version = "1.0" }

