[package]
name = "opendp_verified"
version = "0.14.2-dev"
edition = "2024"

[features]
default = ["use-openssl"]
use-openssl = ["dep:openssl", "dep:openssl-src"]

[dependencies]
dashu = { version = "0.4.0", features = ["num-traits_v02"] }
openssl = { version = "0.10.71", features = ["vendored"], optional = true }
# Keep vendored OpenSSL on a pre-3.5 line for Windows Rtools/MinGW builds.
# `openssl-src` versions `300.Y.Z` package upstream OpenSSL `3.Y.Z`.
# Newer vendored releases pull in QUIC code that fails to compile there.
openssl-src = { version = "=300.3.1", optional = true }
rand = "0.7.3"

[lib]
path = "src/lib.rs"

# Standalone workspace root: this reproduction crate is a self-contained copy of
# the verified crate, built in isolation by Charon (see tools/refresh_opendp_verified_aeneas.sh).
# The empty [workspace] table detaches it from the outer opendp workspace so it
# is not pulled in as a member of rust/Cargo.toml.
[workspace]
